--- a/package.json
+++ b/package.json
@@ -4,5 +4,6 @@
 	"version": "0.2.0",
 	"license": "MIT",
 	"main": "src/mod.js",
-	"akiVersion": "3.3.0"
+	"akiVersion": "3.3.0",
+	"isBundleMod": true
 }
